# gary

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.cursor/: environment.json
.github/workflows/: ci.yml  daily-post.yml
gary/: __init__.py  app.py  pipeline.py
gary/agents/: __init__.py  llm.py  publisher_agent.py  thumbnail_agent.py  transcript_agent.py  trends_agent.py  video_agent.py
gary/content/: __init__.py  store.py
gary/data/: __init__.py  crypto.py  http.py  news.py  stocks.py
gary/finance/: __init__.py  advice.py  debt.py  models.py  networth.py  plaid.py  retirement.py  store.py  transactions.py
gary/integrations/: __init__.py  youtube.py  youtube_data.py
gary/jobs/: __init__.py  daily_post.py  schedule.py  trade_daily.py
gary/realestate/: __init__.py  models.py  rentcast.py  search.py
gary/render/: __init__.py  preview_cache.py  stickfigure.py  tts.py  video.py
gary/static/: dashboard.css  dashboard.js
gary/templates/: dashboard.html
scripts/: com.gary.dashboard.plist.template  install-mac-service.sh  install.sh  mac-dashboard.sh  start-prod.sh  youtube_authorize.py
tests/: conftest.py  test_agents.py  test_app.py  test_content_store.py  test_daily_post.py  test_data.py  test_finance.py  test_llm.py  test_pipeline.py  test_plaid.py  test_preview_cache.py  test_realestate.py  test_render.py  test_retirement.py  test_trading.py  test_trading_metrics.py  test_trading_montecarlo.py  test_trading_selection.py  test_transactions.py  test_tts.py  test_youtube_data.py
(+14 files in other folders)
