[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gary"
version = "0.1.0"
description = "Automated finance-content platform (agents + dashboard)"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["gary", "gary.agents"]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
